# test-ci-cd-pypi

./: README.md  pyproject.toml
.github/workflows/: build.yml  pre_release.yml  release.yml  test_tokens.yml
notebooks/: Normalize country information.ipynb  Validate banking IDs.ipynb
test_ci_cd_pypi/: simple_lib.py
tests/: test_data_reader.py  test_ids_cleaner.py
