[tool.poetry]
name = "test_ci_cd_pypi"
version = "0.1.0"
description = "Simple library to test the automatic packaging and publication into the PyPi environment"
authors = ["Patrycia Barros Pereira <patryciabp@gmail.com>"]
license = "Apache 2"
readme = "README.md"
homepage = "https://github.com/patryciabp/test-ci-cd-pypi"
repository = "https://github.com/patryciabp/test-ci-cd-pypi"

include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
hdx-python-country = "^3.0.2"
python-stdnum = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
